# PokeHeaven

./: .gitignore  TUTORIAL.md  TUTORIAL.txt  build.sh  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
.gitea/workflows/: main.yml
public/: rem.json
src/: constants.ts  helpers.ts  main.tsx  routeTree.gen.ts  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  helpers.rs  lib.rs  main.rs
src-tauri/src/commands/: authenticate.rs  mod.rs
src/components/: AOutlet.tsx  Account.tsx  DragWrapper.tsx  Dropdown.tsx  InputRange.tsx  Skin.tsx  Spinner.tsx  Switch.tsx  mods.tsx  news.tsx
src/components/alert/: Alert.tsx
src/components/icons/: icons.tsx
src/components/loading/: Loading.tsx
src/components/notification/: Notify.tsx
src/components/tauri/: TitleBar.tsx
src/routes/: __root.tsx  index.tsx
src/routes/home/: index.tsx  route.tsx  settings.tsx
src/routes/onboard/: 1.tsx  confirm.tsx  index.tsx  login.tsx  route.tsx
src/store/: auth.ts  db.ts  mods.ts  news.ts  options.ts  profiles.ts  remote.ts
