[package]
name = "phynariamc"
version = "1.0.0"
description = "PhynariaMC Launcher"
authors = ["Miate", "Haume"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true
opt-level = 1      # Slight optimization while keeping fast compiles
debug = false      # Disables debug symbols

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "phynariamc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5.2"
lyceris = { git = "https://github.com/BatuhanAksoyy/lyceris", rev = "3b0c2c8ef5af021bb0f7b32cd32c19428d5402b3" }
thiserror = "2.0.11"
tokio = { version = "1.44.1", features = ["process"] }
log = "0.4.26"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-drpc = "*"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
